v1/README.md
# FoodBridge — Mock Platform

One shell that makes ten independently-built module mockups, published by six
different people on their own GitHub Pages sites, behave like a single
application. Pick a module in the sidebar and it loads in place.

**▶ Live site:** https://nishant-devekar.github.io/foodbridge-mock-platform/

Every module is a real, shareable URL — `#/inventory/raw-material-inventory`
opens straight to that screen, and browser back/forward work.

## What it is, and what it is not

**It is a nav shell.** It owns the sidebar, the routing and the active state.
The sidebar markup is copied class-for-class from the `storefront-frontend`
port, which was verified against the running app at `b2bgreens.com`, so it
matches the real QA store sidebar.

**It is not a copy of anyone's work.** Nothing is vendored. Every destination is
loaded live, in an iframe, from the URL its owning team publishes. When they
push, this reflects it on the next load. That also means a module going down or
changing shape shows up here — which is the point.

## The modules

| Nav | Screens | Owner |
| --- | ------- | ----- |
| Dashboard | 1 | `nidhimehta9399/foodbridge-dashboard-mockup` |
| Product Master | Finished Goods · Product Categories · Raw Materials | `exagon-ai/foodbridge-module-products` |
| Customer Management | B2B Customers · Retail Customers | `nidhimehta9399/foodbridge-customer-mockup` |
| Sales Orders | 1 | `nishant-devekar/foodbridge-sales-orders-mockup` |
| Distribution & Logistics | Route Planning · Delivery Management · Logistic Returns | `kdansari02/foodbridge-module-distribution-logistics` |
| Production | Batch Management · Semifinished Products · Configure Recipe | `nishant-devekar/foodbridge-production-discovery` |
| Inventory | Finished Goods Inventory · Raw Material Inventory | `nishant-devekar/foodbridge-inventory-mockup` |
| Procurement | Purchase Orders · Supplier Management | `love-scripter/foodbridge-module-procurement` |
| Finance | Customer Receivables · Supplier Payables | `kdansari02/invoice-payment-overview` |
| Workforce Management | 1 | `nishant-devekar/foodbridge-staff-mockup` |

20 destinations. The whole tree — every URL, every offset — is
[`assets/modules.json`](assets/modules.json). Adding a module means adding an
entry there; there is no other place to change.

## How the seam works

Each module renders its *own* copy of the QA sidebar, so naive embedding would
show two. The platform pushes the module's sidebar out of view by making its
iframe `clipLeft` px wider than the visible area and offsetting it left by the
same amount, inside `overflow: hidden`.

The module's own **header is deliberately kept** and serves as the app header, so
there is exactly one. Clipping vertically as well would look right at rest and
break on scroll, because a module's sticky toolbar sticks to the iframe's top
edge — which would then sit above the visible area.

`clipLeft` is measured per destination, never inferred. Four widths are in use
(0, 212, 250, 256), and two screens in the *same repo* differ. See
[`tools/measuring-clip-offsets.md`](tools/measuring-clip-offsets.md).

**The known cost:** clipping shifts a module's viewport origin, so a dialog the
module centres on its own viewport lands `clipLeft / 2` px left of the visible
centre. The fix is for each module to support `?embed=1` and hide its own
sidebar, which would let the platform set `clipLeft: 0`. That needs a change in
each module's repo, so it is not done yet.

## What is not in the nav

Five items from the real QA sidebar are omitted because no mockup exists for
them, rather than shown as dead links:

| Item | Why |
| ---- | --- |
| Image Gallery | Not built in the products module |
| Stock Audit Settlement | No mockup supplied |
| Route Delivery | No mockup supplied |
| Store QR Code | No mockup supplied |
| Production Settlement | A mockup *does* exist, but the QA sidebar has no such item, so it is not in the nav |

Two mappings are worth knowing about:

- **Finished Goods** points at the products module's "All Products" screen — the
  same list, under the name the QA sidebar uses.
- **Purchase Orders** is what the procurement module's screen 02 actually is; it
  was described as "Sourcing Orders" in the original list.

## Running locally

`modules.json` is read with `fetch()`, which browsers block on `file://`. Serve
over HTTP:

```bash
python3 -m http.server 8000
```

Then open <http://localhost:8000/>.

## Verification

All 20 destinations were driven in a real browser: each loads, applies its
measured clip, and sets the correct active state in the sidebar. Six were
additionally checked by eye against the module opened standalone.

One caution for anyone re-checking this: the browser screenshot pipeline
regularly returns a **stale frame** right after an iframe navigates, which looks
exactly like a blank or broken module. Four "broken" modules during the build
were this artifact and nothing else. Force a repaint before trusting a
screenshot — the method is in the tools doc.
